# production-api

./: .dockerignore  .ebignore  .env.example  .env.secrets.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Procfile  README.md  STRUCTURE.md  data-science.env.example  docker-compose.yml  init-db.sql  pyproject.toml  requirements.txt
src/api/: app_fastapi.py  ticker_matcher.py
src/config/: __init__.py  settings.py
src/core/interfaces/: matching_strategy.py
src/core/services/: __init__.py  company_matcher_service.py  exact_matcher_service.py  fuzzy_matcher_service.py  openai_service.py  raw_data_fetcher_service.py  ticker_data_processor_service.py  ticker_updater_service.py
src/core/services/ai/: __init__.py  openai_availability_checker_service.py  openai_client_service.py  openai_request_service.py  openai_response_processor_service.py
src/core/services/converters/: __init__.py
src/core/services/data_processing/: __init__.py  raw_data_processor_service.py  ticker_data_fetcher_service.py  ticker_dataframe_fetcher_service.py
src/core/services/flask_app/: __init__.py  flask_app_service.py  flask_route_registration_service.py  flask_service_initializer_service.py
src/core/services/functions/: __init__.py  converters.py  data_filters.py  validators.py
src/core/services/health_checkers/: __init__.py  ticker_health_checker_service.py
src/core/services/matchers/: __init__.py  exact_match_finder_service.py  exact_match_validator_service.py  fuzzy_match_finder_service.py  match_result_preparer_service.py  match_score_calculator_service.py  nearest_neighbors_service.py  tfidf_vectorizer_service.py  vectorizer_setup_service.py
src/database/repositories/: __init__.py
src/docs/: openapi.yaml
src/docs/prompts/: __init__.py  openai_prompts.py
src/examples/: library_usage_example.py  ticker_matcher.py
src/models/: __init__.py  api.py  ticker.py
src/utils/: __init__.py  company_name_cleaner.py  etf_detector.py  export_db_to_csv.py  text_extractor.py
src/utils/etf_detection/: __init__.py  etf_keyword_checker_service.py  fund_type_classifier_service.py
src/utils/text_processing/: __init__.py  alphanumeric_cleaner_service.py  suffix_remover_service.py  text_case_converter_service.py  whitespace_normalizer_service.py
(+12 files in other folders)
