[project]
name = "fuzzyapi"
version = "0.1.0"
description = ""
authors = [
    {name = "ssmitty",email = "ssmitty@udel.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (==3.0.2)",
    "pandas (==1.3.5)",
    "fuzzywuzzy (==0.18.0)",
    "python-levenshtein (==0.27.1)",
    "requests (==2.31.0)",
    "numpy (==1.26.4)",
    "flasgger (==0.9.7.1)",
    "gunicorn (==21.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
