[project]
name = "production-company-ticker-api"
version = "1.3.0"
description = "Production-ready Python library for matching company names to stock ticker symbols using ML techniques including exact matching, fuzzy matching, and OpenAI-powered fallback matching."
authors = [
    {name = "ssmitty", email = "ssmitty@udel.edu"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["ticker", "stock", "company", "matching", "api", "machine-learning", "nlp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy==1.26.4",
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pandas==2.2.2",
    "rapidfuzz==3.9.1",
    "requests==2.31.0",
    "datasets==2.18.0",
    "gunicorn==21.2.0",
    "scikit-learn==1.5.1",
    "openai==1.90.0",
    "statsmodels==0.14.4",
    "pytz==2025.2",
    "httpx==0.27.0",
    "psycopg2-binary==2.9.9",
    "SQLAlchemy==2.0.23",
    "pydantic==2.4.2",
    "python-multipart==0.0.6"
]

[project.urls]
Homepage = "https://github.com/ssmitty/production-api"
Repository = "https://github.com/ssmitty/production-api.git"
Issues = "https://github.com/ssmitty/production-api/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api" 